# Structuri-de-Date-si-Algoritmi

./: README.md
Generic Sorting Algorithms/bubble/: bubblesort.c  bubblesort.h
Generic Sorting Algorithms/heap/: heap_sort.h
Generic Sorting Algorithms/insertion/: insertion_sort.h  main.c  makefile
Generic Sorting Algorithms/merge_sorted_arrays/: main.c
Generic Sorting Algorithms/quick/: exe  main.c  quicksort.c  quicksort.h
Generic Sorting Algorithms/selection/: main.c  selectionsort.c
Generic Sorting Algorithms/shell/: shellsort.c  shellsort.h
Generic Sorting Algorithms/src/: run_test.c  selectionsort.c
Generic Sorting Algorithms/timer/: timer.c
Lab/3/: application.md  exe  main.c  timer.c
Lab/4/: Sortari.c  task.md
Lab/Lab3/: task.md
Lab/Lab6/: task.md
Lab/Lab7/: task.md
Laborator/Lab2/: application.md  task.md
Laborator/Lab4/: Sortari.c  application.md
Laborator/Lab5/: task.md
Laborator/Lab6/: application.md
Laborator/Lab8/: application.md  task.md
Laborator/Lab9/: application.md  task.md
Random Projects/maze/: CMakeLists.txt  main.c
Teme/1/: an_bisect.c  putere.c
Teme/2/: int_list.h  large_integers.md  struct_sort.c
Teme/3/: factorial.c  int_set.h
emacs2/: CMakeLists.txt
emacs2/src/: main.c
emacs2/src/lib/emacs2/: emacs2.c
emacs2/src/lib/io_op/: io_op.c
libraries/: bubblesort.h  heap_sort.h  insertionsort.h  quicksort.h  selectionsort.h  shellsort.h  swap.h
teme/7/SearchBenchmark/: CMakeLists.txt  array_generator.c  array_generator.h  datatype.c  datatype.h  main.c  plotter.py  search.c  search.h
(+168 files in other folders)
